tests/local/invalid-utf8-id.wast
(assert_malformed
  (module quote
    "(func $\"\\ff\")"
  )
  "malformed UTF-8 encoding of string-based id")
